k3s/apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-dns
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.geeklabs.dev
      tls:
        - hosts:
          - argocd.geeklabs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
